talks/designing-for-failure/code/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings
  http:
  - route:
    - destination:
        host: ratings
        subset: v1
    timeout: 10s // HLtimeout
    retries: // HLretry
      attempts: 3 // HLretry
      perTryTimeout: 2s // HLretry
